# AdventOfCodeRust

./: Cargo.toml  README.md
src/: main.rs  utilities.rs
src/aoc2020/: day1.rs  day10.rs  day2.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
src/aoc2020/day3/: mod.rs  position.rs  velocity.rs
src/aoc2020/day4/: field_type.rs  mod.rs
src/aoc2021/: day1.rs  day2.rs  day3.rs  day4.rs
src/aoc2024/: day1.rs  day2.rs  day3.rs  day4.rs
src/day1/: mod.rs
