[package]
name = "AdventOfCodeRust"
version = "0.1.0"
authors = ["Daniel Garcia <dagarcia625@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.*"
regex = "1.11.*"
lazy_static = "1.5.0"
itertools = "0.13.*"
ndarray = "0.16.*"